--- a/package.json
+++ b/package.json
@@ -74,6 +74,11 @@
     "carbon-icons": "^7.0.7",
     "classnames": "^2.2.6",
     "crypto": "^1.0.1",
+    "debug": "^4.1.1",
+    "object-path": "^0.11.4",
+    "react-custom-scroll": "^4.0.1",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-textarea-autosize": "^7.1.0",
     "validator": "^10.11.0"
   }
 }
